fixed opacity of project image on mobile

--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -162,7 +162,7 @@
   .main {
     width: 100%;
     margin: 0;
-    opacity: 0.5;
+    opacity: 0.5 !important;
   }
 
   .projectDescription {
